kind/hack/minio_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: minio
    namespace: kubeflow
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: minio-service
                            port:
                                number: 9000
